[package]
authors = ["Matthias Seitz <matthias.seitz@tum.de>"]
name = "archiveis"
version = "0.2.2"
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/archiveis"
repository = "https://github.com/mattsse/archiveis-rs"
readme = "README.md"
categories = ["command-line-utilities","api-bindings"]
keywords = ["archive"]
description = """
Archive websites online using the archive.is capturing service.
"""
edition = "2018"
[[bin]]
name = "archiver"
path = "src/archiver.rs"
required-features = ["cli"]

[dependencies]
hyper = "0.12"
futures = "0.1"
url = "1.7"
chrono = "0.4"
clap = "2.33"
structopt = { version = "0.2", optional = true }
tokio = { version = "0.1.21", optional = true }


[badges]
travis-ci = { repository = "MattsSe/archiveis-rs" }

[features]
cli = ["structopt", "tokio"]
