[package]
authors = ["Matthias Seitz <matthias.seitz@tum.de>"]
name = "archiveis"
version = "0.3.0"
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/archiveis"
repository = "https://github.com/mattsse/archiveis-rs"
readme = "README.md"
categories = ["command-line-utilities","api-bindings"]
keywords = ["archive"]
description = """
Archive websites online using the archive.is capturing service.
"""
edition = "2018"
[[bin]]
name = "archiveis"
path = "src/archiveis.rs"
required-features = ["cli"]

[dependencies]
hyper = "0.12"
futures = "0.1"
url = "1.7"
chrono = "0.4"
clap = "2.33"
structopt = { version = "0.2", optional = true }
pretty_env_logger = { version = "0.3", optional = true }
log = "0.4"
serde_json = { version = "1.0", optional = true }
serde = { version = "1.0", optional = true, features = ["derive"] }
tokio-fs = { version = "0.1", optional = true }
tokio-io = { version = "0.1", optional = true }


[badges]
travis-ci = { repository = "MattsSe/archiveis-rs" }

[features]
with-serde = ["serde", "chrono/serde"]
cli = ["structopt", "pretty_env_logger", "tokio-fs", "tokio-io", "with-serde", "serde_json"]
